# realworld-axum-sqlx

./: Cargo.toml  README.md  filtered  main.py
migrations/: 20230403125654_make_table.sql  20230404091100_update_table.sql  20230405083846_update_articles.sql  20230405120238_update_comment.sql
src/: authentication.rs  db_helpers.rs  errors.rs  handlers.rs  lib.rs  main.rs  models.rs
src/data_formats/: mod.rs  request.rs  response.rs  wrapper.rs
src/db_helpers/: article_helpers.rs  comment_helpers.rs  mod.rs  profile_helpers.rs  tag_helpers.rs  user_helpers.rs
