[package]
name = "realworld"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.70"
argon2 = "0.5.0"
axum = { version = "0.6.12", features = ["json"] }
chrono = "0.4.24"
dotenvy = "0.15.7"
jsonwebtoken = "8.3.0"
rand = "0.8.5"
serde = "1.0.159"
serde_json = "1.0.95"
sqlx = { version = "0.6.3", features = [
    "sqlite",
    "runtime-tokio-native-tls",
    "chrono",
] }
time = "0.3.20"
tokio = { version = "1.27.0", features = ["full"] }

[dev-dependencies]
reqwest = { version = "0.11.16", features = ["json"] }
